# BetterStack

./: .gitignore  Readme.md  steps.md
BetterStack_Rust/: .gitignore  Cargo.toml  Readme.md
BetterStack_Rust/api/: .env  Cargo.toml
BetterStack_Rust/api/src/: main.rs  req_input.rs  req_output.rs
BetterStack_Rust/api/src/middleware/: mod.rs
BetterStack_Rust/api/src/route/: alerts.rs  mod.rs  user.rs  website.rs
BetterStack_Rust/pusher/: .env  Cargo.toml
BetterStack_Rust/pusher/src/: main.rs
BetterStack_Rust/redis/: Cargo.toml
BetterStack_Rust/redis/src/: config.rs  lib.rs  main.rs  stream.rs
BetterStack_Rust/store/: .env  Cargo.toml  readme.md
BetterStack_Rust/store/migrations/2026-02-16-012916-0000_run/: up.sql
BetterStack_Rust/store/migrations/2026-02-16-013253-0000_run/: up.sql
BetterStack_Rust/store/migrations/2026-02-16-013400-0000_added_user_model/: up.sql
BetterStack_Rust/store/src/: config.rs  lib.rs  schema.rs  store.rs
BetterStack_Rust/store/src/model/: user.rs  (+1 more)
BetterStack_Rust/worker/: Cargo.toml
BetterStack_Rust/worker/src/: main.rs
BetterStack_turbo/: README.md  package-lock.json  package.json
BetterStack_turbo/apps/api/: package.json
BetterStack_turbo/apps/my-app/: package.json
BetterStack_turbo/apps/pusher/: README.md  index.ts  package.json
BetterStack_turbo/apps/test/: README.md  website.test.ts
BetterStack_turbo/apps/worker/: index.ts  package.json
redis_stream_ex/producer/: README.md  index.ts  package.json  redis_readme.md
redis_stream_ex/worker/: index.ts  package.json
server/: index.js  package.json
(+43 files in other folders)
