[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
store = { path = "../store" }
redis-stream = { path = "../redis" }
